Bio is not wrapping around image but is displaying as a single column within the center content area. Fixed.#1879

--- a/themes/hwpi_basetheme/css/hwpi.base.css
+++ b/themes/hwpi_basetheme/css/hwpi.base.css
@@ -481,8 +481,12 @@ article.node-teaser.node-person .field-name-field-person-photo ~ .node-content {
   margin: 0;
 }
 
+.node-type-person #main-content #content .node-person.with-person-photo .field-name-body {
+  margin-left: 0;
+}
+
 .node-type-person #content .node-person.with-person-photo .field-name-body {
-  margin-left: 210px;
+    margin-left: 210px;
 }
 
 .node-type-person .node-person .block {
